:lipstick: Fix icon positionning on mobile

--- a/src/components/OldMeetups/OldMeetups.module.css
+++ b/src/components/OldMeetups/OldMeetups.module.css
@@ -61,7 +61,8 @@
 }
 
 .talk {
-  position: relative;
+  display: flex;
+  justify-content: space-between;
 }
 
 .talk__title {
@@ -76,9 +77,8 @@
 }
 
 .talk__video {
-  position: absolute;
-  top: 0;
-  right: 0;
+  margin-top: 1rem;
+  margin-left: 1rem;
 }
 
 .talks {
